adjusted calcDisplay ruleset to scroll and overflow break anywhere to ensure that the display text stayed within the display area

--- a/style.css
+++ b/style.css
@@ -82,6 +82,9 @@ body {
     color: white;
     font-size: 32px;
     align-content: center;
+    width: 422px;
+    overflow-y: scroll;
+    overflow-wrap: anywhere;
 }
 
 .calcNumber {
